@@ -25,6 +25,7 @@ script.
         var txhash = data[1]; //variables for better readability
         var out = data[2]; //variables for better readability
         var vin = data[3]; //variables for better readability
+        var balance = (data[4] / 100000000).toLocaleString('en',{'minimumFractionDigits':2,'maximumFractionDigits':8,'useGrouping':true}); //variables for better readability
 
         $("td:eq(0)", row).html(timestamp);
         $("td:eq(1)", row).html('<a href="/tx/' + txhash + '">' + txhash + '</a>');
@@ -43,13 +44,14 @@ script.
             amount = amount.toLocaleString('en',{'minimumFractionDigits':2,'maximumFractionDigits':8,'useGrouping':true});
             $("td:eq(2)", row).html(amount).addClass("info");
           }
-        }else if(out > 0) {
+        } else if (out > 0) {
           amount = (out / 100000000).toLocaleString('en',{'minimumFractionDigits':2,'maximumFractionDigits':8,'useGrouping':true});
           $("td:eq(2)", row).html("+" + amount).addClass("success");
-        }else{
+        } else {
           amount = (vin / 100000000).toLocaleString('en',{'minimumFractionDigits':2,'maximumFractionDigits':8,'useGrouping':true});
           $("td:eq(2)", row).html("-" + amount).addClass("danger");
         }
+        $("td:eq(3)", row).html(balance);
 
       },
     });
@@ -60,4 +62,5 @@ table#address-txs.table.table-bordered.table-striped
       th.hidden-xs #{settings.locale.timestamp}
       th.hidden-xs #{settings.locale.tx_hash}
       th #{settings.locale.mkt_amount} (#{settings.symbol})
+      th #{settings.locale.rl_balance} (#{settings.symbol})
   tbody
